Thu May  1 20:47:30 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_s_create): should access converted hash value.
	  [ruby-dev:34555]

Thu May  1 20:31:09 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_parse.rb (TestParse::test_void_expr_stmts_value):
	  shut up warning.

	* rational.c (nurat_to_f): no need for forceful warning when
	  converting to float.  overflow is a nature of float values.

Thu May  1 16:10:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_delete_if): return enumerator if no block given.
	  [ruby-dev:34554]

Wed Apr 30 21:36:40 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (url_encode): [ruby-dev:34497] ERB::Util#url_encode
	  bug fix. Reported by rubikitch.

	* test/erb/test_erb.rb: ditto

Wed Apr 30 20:11:36 2008  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/net/telnet.rb:  Fixing a bug where line endings would not be properly
	  escaped when the two character ending was broken up into separate TCP
	  packets.  Issue reported and patched by Brian Candler.

Wed Apr 30 18:03:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_load_path), vm_core.h (rb_vm_t): moved to VM.

	* load.c (rb_get_load_path): returns absolute load path.

	* load.c (load_path_getter): $LOAD_PATH getter.

	* file.c (rb_find_file_ext, rb_find_file), ruby.c (push_include,
	  ruby_init_loadpath): use the accessor.

	* vm.c (rb_vm_mark): mark load_path.

Wed Apr 30 17:47:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_search): use local variable.  a patch from wanabe
	  <s.wanabe AT gmail.com> in [ruby-dev:34537].  [ruby-dev:34492]

Wed Apr 30 16:10:18 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval_intern.h: speficy the values of the enumeration constants
	  explicitly.  [ruby-dev:34489]

Wed Apr 30 12:32:39 2008  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_redirect_fd): prohibit duplex IO.
	  (check_exec_fds): record maxhint even if close_others is not