@@ -1,3 +1,8 @@
+Thu May  1 23:20:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* bignum.c (rb_big_divide): return an integer for idiv.
+	  [ruby-dev:34553]
+
 Thu May  1 20:47:30 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* hash.c (rb_hash_s_create): should access converted hash value.
